Vaapi: baseline trace names and add a video_encode

This CL changes the TRACE_ for accelerated video decode from the
current "Video Decoder" to "media.gpu", since trace categories
are never more than one word, and there seems to be plenty of
categories composed with dot (e.g. cc.debug.quads etc). This
category doesn't seem to be named in Chromium OS tests, so
this change should not affect anyone.

This CL also adds a new entry for Vaapi video encoding.

Bug: 811912
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I170252752ab32c49bb4e479469700be396f6421b
Reviewed-on: https://chromium-review.googlesource.com/916887
Commit-Queue: Miguel Casas <mcasas@chromium.org>
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>
Reviewed-by: Daniele Castagna <dcastagna@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536718}
Former-commit-id: b15526fb53df7b2118d558a3d511ad165cb8898d