media/gpu/v4l2/v4l2_video_decode_accelerator.cc
@@ -760,7 +760,7 @@ void V4L2VideoDecodeAccelerator::DecodeTask(
   DVLOGF(4) << "input_id=" << bitstream_buffer.id();
   DCHECK(decoder_thread_.task_runner()->BelongsToCurrentThread());
   DCHECK_NE(decoder_state_, kUninitialized);
-  TRACE_EVENT1("Video Decoder", "V4L2VDA::DecodeTask", "input_id",
+  TRACE_EVENT1("media.gpu", "V4L2VDA::DecodeTask", "input_id",
                bitstream_buffer.id());
 
   std::unique_ptr<BitstreamBufferRef> bitstream_record(new BitstreamBufferRef(
@@ -803,7 +803,7 @@ void V4L2VideoDecodeAccelerator::DecodeBufferTask() {
   DVLOGF(4);
   DCHECK(decoder_thread_.task_runner()->BelongsToCurrentThread());
   DCHECK_NE(decoder_state_, kUninitialized);
-  TRACE_EVENT0("Video Decoder", "V4L2VDA::DecodeBufferTask");
+  TRACE_EVENT0("media.gpu", "V4L2VDA::DecodeBufferTask");
 
   decoder_decode_buffer_tasks_scheduled_--;
 
@@ -1168,7 +1168,7 @@ void V4L2VideoDecodeAccelerator::ServiceDeviceTask(bool event_pending) {
   DVLOGF(4);
   DCHECK(decoder_thread_.task_runner()->BelongsToCurrentThread());
   DCHECK_NE(decoder_state_, kUninitialized);
-  TRACE_EVENT0("Video Decoder", "V4L2VDA::ServiceDeviceTask");
+  TRACE_EVENT0("media.gpu", "V4L2VDA::ServiceDeviceTask");
 
   if (decoder_state_ == kResetting) {
     DVLOGF(3) << "early out: kResetting state";
@@ -1251,7 +1251,7 @@ void V4L2VideoDecodeAccelerator::Enqueue() {
   DVLOGF(4);
   DCHECK(decoder_thread_.task_runner()->BelongsToCurrentThread());
   DCHECK_NE(decoder_state_, kUninitialized);
-  TRACE_EVENT0("Video Decoder", "V4L2VDA::Enqueue");
+  TRACE_EVENT0("media.gpu", "V4L2VDA::Enqueue");
 
   // Drain the pipe of completed decode buffers.
   const int old_inputs_queued = input_buffer_queued_count_;
@@ -1345,7 +1345,7 @@ void V4L2VideoDecodeAccelerator::Dequeue() {
   DVLOGF(4);
   DCHECK(decoder_thread_.task_runner()->BelongsToCurrentThread());
   DCHECK_NE(decoder_state_, kUninitialized);
-  TRACE_EVENT0("Video Decoder", "V4L2VDA::Dequeue");
+  TRACE_EVENT0("media.gpu", "V4L2VDA::Dequeue");
 
   while (input_buffer_queued_count_ > 0) {
     if (!DequeueInputBuffer())
@@ -1504,7 +1504,7 @@ bool V4L2VideoDecodeAccelerator::EnqueueOutputRecord() {
   DCHECK_EQ(output_record.state, kFree);
   DCHECK_NE(output_record.picture_id, -1);
   if (output_record.egl_sync != EGL_NO_SYNC_KHR) {
-    TRACE_EVENT0("Video Decoder",
+    TRACE_EVENT0("media.gpu",
                  "V4L2VDA::EnqueueOutputRecord: eglClientWaitSyncKHR");
     // If we have to wait for completion, wait.  Note that
     // free_output_buffers_ is a FIFO queue, so we always wait on the
@@ -1545,7 +1545,7 @@ void V4L2VideoDecodeAccelerator::ReusePictureBufferTask(
     std::unique_ptr<EGLSyncKHRRef> egl_sync_ref) {
   DVLOGF(4) << "picture_buffer_id=" << picture_buffer_id;
   DCHECK(decoder_thread_.task_runner()->BelongsToCurrentThread());
-  TRACE_EVENT0("Video Decoder", "V4L2VDA::ReusePictureBufferTask");
+  TRACE_EVENT0("media.gpu", "V4L2VDA::ReusePictureBufferTask");
 
   // We run ReusePictureBufferTask even if we're in kResetting.
   if (decoder_state_ == kError) {
@@ -1597,7 +1597,7 @@ void V4L2VideoDecodeAccelerator::ReusePictureBufferTask(
 void V4L2VideoDecodeAccelerator::FlushTask() {
   VLOGF(2);
   DCHECK(decoder_thread_.task_runner()->BelongsToCurrentThread());
-  TRACE_EVENT0("Video Decoder", "V4L2VDA::FlushTask");
+  TRACE_EVENT0("media.gpu", "V4L2VDA::FlushTask");
 
   if (decoder_state_ == kError) {
     VLOGF(2) << "early out: kError state";
@@ -1709,7 +1709,7 @@ bool V4L2VideoDecodeAccelerator::SendDecoderCmdStop() {
 void V4L2VideoDecodeAccelerator::ResetTask() {
   VLOGF(2);
   DCHECK(decoder_thread_.task_runner()->BelongsToCurrentThread());
-  TRACE_EVENT0("Video Decoder", "V4L2VDA::ResetTask");
+  TRACE_EVENT0("media.gpu", "V4L2VDA::ResetTask");
 
   if (decoder_state_ == kError) {
     VLOGF(2) << "early out: kError state";
@@ -1780,7 +1780,7 @@ void V4L2VideoDecodeAccelerator::FinishReset() {
 void V4L2VideoDecodeAccelerator::ResetDoneTask() {
   VLOGF(2);
   DCHECK(decoder_thread_.task_runner()->BelongsToCurrentThread());
-  TRACE_EVENT0("Video Decoder", "V4L2VDA::ResetDoneTask");
+  TRACE_EVENT0("media.gpu", "V4L2VDA::ResetDoneTask");
 
   if (decoder_state_ == kError) {
     VLOGF(2) << "early out: kError state";
@@ -1813,7 +1813,7 @@ void V4L2VideoDecodeAccelerator::ResetDoneTask() {
 
 void V4L2VideoDecodeAccelerator::DestroyTask() {
   VLOGF(2);
-  TRACE_EVENT0("Video Decoder", "V4L2VDA::DestroyTask");
+  TRACE_EVENT0("media.gpu", "V4L2VDA::DestroyTask");
 
   // DestroyTask() should run regardless of decoder_state_.
 
@@ -1996,7 +1996,7 @@ void V4L2VideoDecodeAccelerator::FinishResolutionChange() {
 void V4L2VideoDecodeAccelerator::DevicePollTask(bool poll_device) {
   DVLOGF(4);
   DCHECK(device_poll_thread_.task_runner()->BelongsToCurrentThread());
-  TRACE_EVENT0("Video Decoder", "V4L2VDA::DevicePollTask");
+  TRACE_EVENT0("media.gpu", "V4L2VDA::DevicePollTask");
 
   bool event_pending = false;
 
