media/gpu/vaapi/vaapi_video_encode_accelerator.cc
@@ -19,6 +19,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "base/numerics/safe_conversions.h"
 #include "base/single_thread_task_runner.h"
 #include "base/threading/thread_task_runner_handle.h"
+#include "base/trace_event/trace_event.h"
 #include "media/base/bind_to_current_loop.h"
 #include "media/gpu/h264_dpb.h"
 #include "media/gpu/shared_memory_region.h"
@@ -647,6 +648,8 @@ void VaapiVideoEncodeAccelerator::EncodeFrameTask() {
 
   linked_ptr<InputFrameRef> frame_ref = encoder_input_queue_.front();
   encoder_input_queue_.pop();
+
+  TRACE_EVENT0("media.gpu", "VAVEA::EncodeFrameTask");
 
   if (!UploadFrame(frame_ref->frame)) {
     NOTIFY_ERROR(kPlatformFailureError, "Failed uploading source frame to HW.");
